--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,15 @@
 FROM php:7.2-apache-stretch
 
+RUN ["apt-get", "update"]
+RUN ["apt-get", "install", "-y", "vim"]
+
+RUN docker-php-ext-install pdo_mysql \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
+    && a2enmod rewrite
+
+COPY . /var/www/html
+COPY docker/vhost.conf /etc/apache2/sites-available/000-default.conf
+COPY docker/config/php/conf.d/*.ini /usr/local/etc/php/conf.d/
+
+RUN chown -R www-data:www-data /var/www/html
